--- a/.github/workflows/ts-packages.yml
+++ b/.github/workflows/ts-packages.yml
@@ -60,6 +60,18 @@ jobs:
           ENABLE_GAS_REPORT: 1
       - name: Print gas report
         run: cat packages/contracts/gas-report.txt
+
+      - name: Test Coverage
+        run: yarn test:coverage
+        # Tests are quite brittle when instrumented by Solidity Coverage.
+        # If tests pass in the Test step above, tests failing during coverage shouldn't break CI.
+        continue-on-error: true
+      - uses: codecov/codecov-action@v1
+        with:
+          files: ./packages/contracts/coverage.json
+          fail_ci_if_error: false
+          verbose: true
+
   lint:
     name: Linting
     runs-on: ubuntu-latest
