--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -42,3 +42,17 @@ jobs:
             yarn build:contracts
             yarn build:contracts:ovm
             yarn test:integration
+
+      # Examples Tests
+      - name: Test & deploy truffle-example on truffle (regression)
+        working-directory: ./examples/truffle
+        run: |
+          yarn compile
+          yarn test
+          yarn deploy
+      - name: Test & deploy truffle-example on Optimism
+        working-directory: ./examples/truffle
+        run: |
+          yarn compile:ovm
+          yarn test:ovm 
+          yarn deploy:ovm 
