add:  l1-l2-deposit-withdrawal

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -60,8 +60,15 @@ jobs:
         run: |
           yarn compile
           yarn test:integration
+
       - name: Test & deploy waffle-example on Optimism
         working-directory: ./examples/waffle
         run: |
           yarn compile:ovm
           yarn test:integration:ovm
+      
+      - name: Deploy l1-l2-deposit-withdrawal example on Optimism with cross-domain message passing
+        working-directory: ./examples/l1-l2-deposit-withdrawal
+        run: |
+          yarn compile:ovm
+          yarn deploy:ovm
